# unreal-ng

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_2017.bat  unreal_2017.sln
core/: CMakeLists.txt
core/automation/: CMakeLists.txt  automation-main.cpp  automation.cpp  automation.h  batch-command-processor.cpp  batch-command-processor.h
core/automation/cli/: CMakeLists.txt  README.md
core/automation/lua/: CMakeLists.txt  automation_lua-config.cmake.in
core/automation/python/: CMakeLists.txt
core/automation/webapi/: CMakeLists.txt  DEPLOYMENT.md  OPENAPI_MAINTENANCE.md
core/benchmarks/: CMakeLists.txt
core/benchmarks/loaders/: batch_dispatch_benchmark.cpp  benchmark_path_helper.h  snapshot_benchmark.cpp  snapshot_benchmark.h  videowall_benchmark.cpp
core/cmake/: func.cmake
core/src/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters  emulatorcontext.h  interfaces.h  irenderer.h  messagemanager.cpp  mods.h  stdafx.cpp  stdafx.h  sysdefs.h  targetver.h
core/src/assembler/: z80asm.cpp  z80asm.h
core/src/base/: baserenderer.cpp  baserenderer.h  featuremanager.cpp  featuremanager.h
core/src/common/: autoresetevent.cpp  autoresetevent.h  bithelper.cpp  bithelper.h  callbackcollection.cpp  callbackcollection.h  collectionhelper.h  counterhelper.cpp  dumphelper.cpp  dumphelper.h  emulog.h  emulog_category.h  emulog_registry.cpp  emulog_registry.h  filehelper.cpp  filehelper.h  framenotifier.cpp  framenotifier.h  ilogsink.h  logger.cpp  logger.h  messagemanager.cpp  messagemanager.h  modulelogger.cpp  modulelogger.h  named_pipe.cpp  named_pipe.h  process.cpp  process.h  ringbuffer.h  shared_memory_region.cpp  shared_memory_region.h  spsc_ringbuffer.h  stringhelper.cpp  stringhelper.h  subprocess.cpp  subprocess.h  systemhelper.cpp  systemhelper.h  threadhelper.cpp  (+6 more)
core/src/debugger/: debugmanager.cpp  debugmanager.h
core/src/emulator/: config.cpp  config.h  corestate.cpp  corestate.h  emulator.cpp  emulator.h  emulatorcontext.cpp  emulatorcontext.h  emulatorcounters.cpp  emulatorcounters.h  emulatormanager.cpp  emulatormanager.h  mainloop.cpp  mainloop.h  notifications.h  platform.h  platform_defs.h  ports.h  spectrumconstants.h  state.h
core/src/interfaces/: interfaces.h  irenderer.h
core/src/video/: videorenderer.cpp  videorenderer.h
core/tests/: CMakeLists.txt  README.md  emulator_path_validation_test.cpp  main.cpp  test.cpp  tests-core.vcxproj  tests-core.vcxproj.filters
core/tests/_helpers/: basictesthelper.cpp  basictesthelper.h  emulatortesthelper.cpp  emulatortesthelper.h  spectrumbasictesthelper.cpp  spectrumbasictesthelper.h  test_path_helper.h  testtiminghelper.cpp  testtiminghelper.h  trdostesthelper.cpp  trdostesthelper.h  trdostesthelper_test.cpp  trdostesthelper_test.h
core/tests/common/: bithelper_test.cpp  bithelper_test.h  dumphelper_test.cpp  dumphelper_test.h  emulator_path_validation_test.cpp  emulog_test.cpp  emulog_test.h  filehelper_test.cpp  filehelper_test.h  modulelogger_test.cpp  modulelogger_test.h  spsc_ringbuffer_test.cpp  spsc_ringbuffer_test.h  stringhelper_test.cpp  stringhelper_test.h
core/tests/debugger/: breakpoints_test.cpp  breakpoints_test.h  keyboard_integration_test.cpp  keyboard_integration_test.h  keyboard_test.cpp  keyboard_test.h  labelmanager_test.cpp  labelmanager_test.h  stepover_test.cpp
core/tests/disassembler/: disassembler_fdcb_test.cpp  disassembler_fdcb_test.h  disassembler_opcode_test.cpp  disassembler_opcode_test.h  disassembler_test.cpp  disassembler_test.h  z80cfdecoder_test.cpp  z80cfdecoder_test.h
core/tests/emulator/: atomic_stepping_test.cpp  emulator_test.cpp  emulator_test.h  emulatormanager_test.cpp
core/tests/loaders/: loader_scl_test.cpp  loader_sna_test.cpp  loader_sna_test.h  loader_tap_test.cpp  loader_tap_test.h  loader_trd_test.cpp  loader_tzx_test.cpp  loader_tzx_test.h  loader_z80_fuzzing_test.cpp  loader_z80_fuzzing_test.h  loader_z80_test.cpp  loader_z80_test.h
core/tests/z80/: opcode_test.cpp  opcode_test.h  z80_logic_jump_test.cpp  z80_logic_jump_test.h  (+2 more)
testclient/: CMakeLists.txt  build_2017.bat
testclient/src/: stdafx.h  testclient.cpp  testclient.h  testclient.vcxproj  testclient.vcxproj.filters
unreal-log-viewer/: CMakeLists.txt
unreal-log-viewer/src/: CategoryPanel.cpp  CategoryPanel.h  ChipStateWidget.cpp  ChipStateWidget.h  EmulatorList.cpp  EmulatorList.h  EnvelopeShapeWidget.cpp  EnvelopeShapeWidget.h  FramebufferWidget.cpp  FramebufferWidget.h  HeatmapWidget.cpp  HeatmapWidget.h  LogViewWidget.cpp  LogViewWidget.h  MainWindow.cpp  MainWindow.h  SegmentationWidget.cpp  SegmentationWidget.h  SparklineWidget.cpp  SparklineWidget.h  TraceWidget.cpp  TraceWidget.h  WebAPIClient.cpp  WebAPIClient.h  main.cpp
unreal-qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  unreal-qt.pro  unreal-qt_en_US.ts
unreal-qt/debugger/: debuggerwindow.cpp  debuggerwindow.h  disassemblercolumnview.cpp  disassemblercolumnview.h  disassemblertextview.cpp  disassemblertextview.h  disassemblerwidget.cpp  disassemblerwidget.h  memorypageswidget.cpp  memorypageswidget.h  registerswidget.cpp  registerswidget.h  stackwidget.cpp  stackwidget.h
unreal-qt/emulator/: emulatormanager.cpp  emulatormanager.h  filemanager.cpp  filemanager.h  keyboardmanager.cpp  soundmanager.cpp  soundmanager.h
unreal-qt/logviewer/: logstatusbar.cpp  logstatusbar.h  logviewer.cpp  logviewer.h  logwindow.cpp  logwindow.h
unreal-qt/src/: main.cpp  mainwindow.cpp  mainwindow.h  menumanager.cpp  menumanager.h
unreal-qt/ui/: debuggerwindow.ui  disassemblerview.ui  hexview.ui  logstatusbar.ui  logwindow.ui  memoryblock.ui  memorymap.ui  registers.ui
unreal-qt/widgets/: devicescreen.cpp  devicescreen.h  verticallabel.h
unreal-screen-viewer/: CMakeLists.txt  README.md
unreal-screen-viewer/src/: EmulatorList.cpp  EmulatorList.h  MainWindow.cpp  MainWindow.h  ModeToolbar.cpp  ModeToolbar.h  ScreenViewer.cpp  ScreenViewer.h  WebAPIClient.cpp  WebAPIClient.h  main.cpp
unreal-videowall/: CMakeLists.txt  README.md
unreal-videowall/src/: main.cpp
(+1042 files in other folders)
